feat: add endpoint from the test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["./*"],
+      "@domains/*": [ "./src/domains/*" ],
+      "@infra/*": [ "./src/infra/*" ],
+      "@commons/*": [ "./src/commons/*" ]
+    }
   }
 }
